--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .bg-img{
-    background-image: url('/image/gold.jpg');
+    background-image: url('https://sithulin12.github.io/sing/image/gold.jpg');
     background-position: center;
 }
 
